# blasmodcli

./: LICENSE  README.md  pyproject.toml
docs/: config.md  design.md
docs/config/: games.toml
docs/config/games/: blas1.toml  blas2.toml
docs/config/sources/: main.toml
scripts/: blas2modcli  blasmodcli
scripts/utils/: install.sh  uninstall.sh
src/blasmodcli/: __main__.py  application.py  cli.py  config.py  exceptions.py  mod.py  mod_source.py  version.py
src/blasmodcli/controller/: __init__.py  command_handler.py
src/blasmodcli/controller/game/: __init__.py  backup.py  cd.py  configure.py  group.py  launch.py  list.py  search.py  update.py
src/blasmodcli/controller/mod/: __init__.py  activate.py  deactivate.py  (+7 more)
src/blasmodcli/exceptions/: __init__.py  argument.py  backend.py  base.py  controller.py  resolver.py
src/blasmodcli/games/: __init__.py  blasphemous.py  blasphemous2.py  game.py  modding_tools.py
src/blasmodcli/model/: __init__.py  authorship.py  dependency.py  file.py  game.py  installation.py  mod.py  mod_installation.py  mod_source.py  modding_tools.py  path.py  source.py  version.py
src/blasmodcli/repositories/: __init__.py  dependency.py  game.py  mod.py  mod_installation.py  mod_source.py  modding_tools.py  repository.py  warehouse.py
src/blasmodcli/utils/: __init__.py  caching.py  colors.py  directories.py  io.py  message.py  resolver.py
src/blasmodcli/view/: __init__.py  confirmation.py  counter.py  formatter.py  gui.py  message.py  mod_list.py  numbered_list.py  progress.py  step.py  table.py  update_list.py
tests/: conftest.py  test_environment.py
(+39 files in other folders)
